# skills

./: .gitignore  pyproject.toml
docs/: design.md  plan.md
literature-overview-minimax/: SKILL.md
literature-overview-opus/: SKILL.md
literature-overview-opus-opt/: SKILL.md
ppt-translator/: .gitignore  README.md  pyproject.toml  skill.md
ppt-translator-opus/: SKILL.md  glossary.csv
ppt-translator-opus/docs/: glossary-guide.md
ppt-translator-opus/src/ppt_translator_opus/: __init__.py  glossary.py  pptx_engine.py  prompt.py
ppt-translator-opus/src/ppt_translator_opus/engines/: base.py  minimax.py
ppt-translator/docs/superpowers/plans/: 2026-03-21-ppt-translation-plan.md
ppt-translator/docs/superpowers/specs/: 2026-03-21-ppt-translation-design.md
ppt-translator/src/ppt_translator/: __init__.py  cli.py  config.py  ppt_handler.py  terminology.py  text_box.py  translator.py
ppt-translator/tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_integration.py  test_ppt_handler.py  test_terminology.py  test_text_box.py  test_translator.py
src/ppt_translator_opus/: cli.py  utils.py
