[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ppt-translator-opus"
version = "0.1.0"
description = "Translate Chinese PPT to English, preserving formatting"
requires-python = ">=3.10"
dependencies = [
    "python-pptx>=1.0.0",
    "click>=8.0",
    "httpx>=0.27",
    "lxml>=5.0",
]

[project.scripts]
ppt-translator-opus = "ppt_translator_opus.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
