[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ppt-translator"
version = "0.1.0"
description = "Translate Chinese PPT to English with terminology management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
]

[tool.setuptools.packages.find]
where = ["src"]
